fix alignment for employments and pensions

--- a/app/assets/stylesheets/_check-your-answers.scss
+++ b/app/assets/stylesheets/_check-your-answers.scss
@@ -33,6 +33,10 @@
     }
   }
 
+  h2 {
+    padding-bottom: 20px;
+  }
+
   .cya-question {
     font-weight: normal;
   }
